# meteo_api_client

./: .gitignore  README.md  data_analysis.html  pyproject.toml
meteo_api/: __init__.py  data_analysis.ipynb  meteo_client.py
